--- a/src/app/home/category/category.component.html
+++ b/src/app/home/category/category.component.html
@@ -26,7 +26,7 @@
             <div class="col-sm-12">
 
 
-                <mat-table [dataSource]="dataSource" matSort>
+                <mat-table [dataSource]="dataSource" matSortDirection="asc" matSort (matSortChange)="sortColumn($event)">
 
                     <!-- ID Column -->
                     <ng-container matColumnDef="id">
