--- a/src/app/home/shop-menu/add-shop-menu/add-shop-menu.component.html
+++ b/src/app/home/shop-menu/add-shop-menu/add-shop-menu.component.html
@@ -22,10 +22,11 @@
                 <div class="col-sm-4">
                     <label for=""> Shop Name</label>
 
-                    <select name="" id="" class="form-control" [(ngModel)]="sname" (change)="shopselcted(sname)" [ngClass]="{ 'is-invalid': submitted && f.sname.errors }" formControlName="sname">
+                    <select name="" id="" class="form-control" [(ngModel)]="sname" (change)="shopselcted($event)" [ngClass]="{ 'is-invalid': submitted && f.sname.errors }" formControlName="sname">
                         <option value="" disabled selected>Choose a option </option>
                         <option *ngFor="let s of shops" value="{{s._id}}" >{{s.shop_name}}</option>
                     </select>
+                    <!-- value="{{s._id}}" -->
                     <div *ngIf="submitted && f.sname.errors" class="invalid-feedback">
                         <div *ngIf="f.sname.errors.required">Shop name is required</div>
 
