--- a/src/app/home/pincodes/add-pincodes/add-pincodes.component.html
+++ b/src/app/home/pincodes/add-pincodes/add-pincodes.component.html
@@ -11,7 +11,7 @@
 
         <div class="row">
             <div class="col-sm-8">
-                <h4 class="page-title">Location</h4>
+                <h4 class="page-title">Add Location</h4>
 
             </div>
         </div>
